re-parse-proc-macro/tests/compile_fail/parse_errors/right_parenthesis.rs
use re_parse_proc_macro::re_parse;

fn main() {
    re_parse!(")", "111B222");
}